; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_ttypes.c_tVariantCreateFromString.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_ttypes.c_tVariantCreateFromString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"true\00", align 1
@TSDB_TRUE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"false\00", align 1
@TSDB_FALSE = common dso_local global i32 0, align 4
@TSDB_DATA_TYPE_NULL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tVariantCreateFromString(%struct.TYPE_3__* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  switch i32 %10, label %52 [
    i32 133, label %11
    i32 128, label %30
    i32 129, label %30
    i32 135, label %30
    i32 130, label %30
    i32 132, label %35
    i32 131, label %35
    i32 134, label %40
  ]

11:                                               ; preds = %4
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @strncasecmp(i8* %12, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* %9, align 4
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %11
  %17 = load i32, i32* @TSDB_TRUE, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 4
  store i32 %17, i32* %19, align 4
  br label %29

20:                                               ; preds = %11
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @strncasecmp(i8* %21, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 5)
  %23 = icmp eq i32 %22, 0
  %24 = zext i1 %23 to i32
  %25 = call i32 @assert(i32 %24)
  %26 = load i32, i32* @TSDB_FALSE, align 4
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 4
  store i32 %26, i32* %28, align 4
  br label %29

29:                                               ; preds = %20, %16
  br label %54

30:                                               ; preds = %4, %4, %4, %4
  %31 = load i8*, i8** %6, align 8
  %32 = call i32 @strtoll(i8* %31, i32* null, i32 10)
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 4
  store i32 %32, i32* %34, align 4
  br label %54

35:                                               ; preds = %4, %4
  %36 = load i8*, i8** %6, align 8
  %37 = call i32 @strtod(i8* %36, i32* null)
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 3
  store i32 %37, i32* %39, align 4
  br label %54

40:                                               ; preds = %4
  %41 = load i8*, i8** %6, align 8
  %42 = load i32, i32* %7, align 4
  %43 = call i32 @strndup(i8* %41, i32 %42)
  %44 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %45 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %44, i32 0, i32 1
  store i32 %43, i32* %45, align 4
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = call i32 @strdequote(i32 %48)
  %50 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %51 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %50, i32 0, i32 2
  store i32 %49, i32* %51, align 4
  br label %54

52:                                               ; preds = %4
  %53 = load i32, i32* @TSDB_DATA_TYPE_NULL, align 4
  store i32 %53, i32* %8, align 4
  br label %54

54:                                               ; preds = %52, %40, %35, %30, %29
  %55 = load i32, i32* %8, align 4
  %56 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %57 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %56, i32 0, i32 0
  store i32 %55, i32* %57, align 4
  ret void
}

declare dso_local i32 @strncasecmp(i8*, i8*, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @strtoll(i8*, i32*, i32) #1

declare dso_local i32 @strtod(i8*, i32*) #1

declare dso_local i32 @strndup(i8*, i32) #1

declare dso_local i32 @strdequote(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
